public/css/videoChatPlayer.css
/* ... */
#clickOptions {
	margin: -4px auto auto 0;
	font-size: 14px;
	cursor: pointer;
	padding: 2px;
	-webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */	
}

.optionsGear {
	fill: #dedede;
	padding: 1px;
	border-radius: 4px;
	-webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */	
}
.optionsGear:hover {
	cursor: pointer;
	background-color: #464649;
}	
#clickOptions .clickOptionstiptext {
  visibility: hidden;
  width: 60px;
  background-color: #464649;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;
  position: absolute;
  z-index: 1;
  top: 62px;
  left: 10%;
}
#clickOptions .clickOptionstiptext::after {
  content: "";
  position: absolute;
  top: 50%;
  right: 100%;
  margin-top: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent #464649 transparent transparent;
}

#clickOptions:hover .clickOptionstiptext {
  visibility: visible;
}

#message {
	margin-top: auto;
	margin-bottom: auto;
	margin-left: 5px;
	font-size: 14px;
	background-color: green;
	padding: 1px 5px;
}
#message.animate {
    animation: fadeOutInfo ease 0.3s;
    transition-delay:5s;
    
}
@keyframes fadeOutInfo {
    100% {
        opacity: 0.4;
    }
    0% {
        opacity: 1;
     }
}

#controls {
    display: inline-block;
}

#collapseChat {
	position: absolute;
	padding: 1px;
	right: 4px;
	top: 65px;
	border-radius: 4px;
	-webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */	
}
#collapseChat:hover {
	cursor: pointer;
	background-color: #464649;
}
#collapseChat .collapsetooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: #464649;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;
  position: absolute;
  z-index: 1;
  top: -5px;
  right: 135%;
}
#collapseChat .collapsetooltiptext::after {
  content: "";
  position: absolute;
  top: 50%;
  left: 100%;
  margin-top: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent transparent #464649;
}

#collapseChat svg {
  fill: #dedede;
}
#collapseChat:hover svg {
  fill: #ffffff;
}
#collapseChat:hover .collapsetooltiptext {
  visibility: visible;
}

#chatCover:hover {
	background-color: #2b2b2f;
	cursor: pointer;
}
#chatCover {
	height: 100%;
	width: 25px;
	position: absolute;
	bottom: 0;
	right: 0;
	border-left: 1px solid #303032;
	border-top: 1px solid #303032;
	border-bottom: 1px solid #303032;
	background-color: #1f1f23;
}
#chatCover svg{
	fill: white;
	position: absolute;
	
}
#chat {
	position: absolute;
	bottom: 0;
	right: 0;
    width: 340px;
    border-left: 1px solid #303032;
	border-top: 1px solid #303032;
    height: calc(100% - 96px);
	overflow-y: scroll;
	background-color:#18181b;
 	font-family: "Inter";
	color: rgb(222, 222, 227);
	font-size: 13px;
	font-weight: 400;
	line-height: 20px;
	overflow-x: hidden;
	scrollbar-width: thin;
	/* scrollbar-width: none; */
	padding-bottom: 5px;
}

/* Test Message formatting */

.issubmessage {
	border-left-color: #a970ff;
	border-left-style: solid;
	border-left-width: 6px;
	background-color: #1f1f23;
}
.issubmessage .commenter{
	position: relative;
	top: 8px;
	left: 10px;
	margin: 0;
	display: block;
	font-weight: 700;
	display: inline-block;
}
.issubmessage .chatmessage{
	position: relative;
	margin: 0 auto 10px 45px;
	display: block;
}
.issubmessage .subResubTheyve{
	position: relative;
	margin-left: 5px;
}
.issubmessage .userComment .chatmessage{
	margin: 0;
	display: inline;
}
.userComment {
	display: block;
	margin-bottom: 10px;
	margin-left: 16px;
}

.issubmessage .commenter2{
	position: relative;
	left: 0;
	margin: 0;
	display: inline;
	font-weight: 700;
	display: inline-block;
	vertical-align: top;
}
.issubmessage svg{
	margin: 9px auto auto 15px;
	width: 20px;
	height: 20px;
	display: inline-block;
}
.primeSub {
	position: relative;
	margin: 0;
	fill: #a970ff;
	width: 16px;
	height: 11px;
}
.prime {
	color: #a970ff;
}
.tierOneSub {
	position: relative;
	margin: 0;
	fill: #adadb8;
	width: 16px;
	height: 11px;
}
.subgift {
	fill: #efeff1;
}
.issubgift {
	margin-top: -4px;
}
.issubgift .subgiftcontainer{
	margin-left: 45px;
}
.issubgift .subgiftcontainer .chatmessage{
	margin-left: 0;
}
.issubgift svg{
	margin-left: 15px;
	position: relative;
	top: 50%;
	-webkit-transform: translateY(-50%);
	-ms-transform: translateY(-50%);
	transform: translateY(-50%);
}
.issubgift .issubmessage svg{
	margin-top: auto;
	margin-left: 15px;
	display: inline;
	vertical-align: middle;
}

.isbiggiftsubmessage {
	border-left-color: #a970ff;
	border-left-style: solid;
	border-left-width: 6px;
	background-color: #1f1f23;
	margin: 0;
}
.isbiggiftsubmessage .commenter{
	position: relative;
	top: 12px;
	left: 9px;
	margin: 0;
	display: block;
	font-size: 16px;
	font-weight: 900;
	display: inline-block;
}
.isbiggiftsubmessage .chatmessage{
	position: relative;
	margin: -16px auto 14px 65px;
	display: block;
	color: #adadb8;
}
/* ... */

